--- a/style.css
+++ b/style.css
@@ -120,13 +120,15 @@ img {
 
 @media (max-width: 800px) {
     #blog {
-        display: none;
+        display: inline;
     }
 
     img {
-        width: auto ;
-        max-width: 100% ;
-        height: auto ;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        object-position: bottom;
+
     }
 
     .container {
