--- a/style.css
+++ b/style.css
@@ -118,21 +118,26 @@ img {
     font-size: 0.7em;
        }
 
-@media (max-width: 800px) {
+@media (max-width: 400px) {
+    body {
+        margin: 10px;
+        padding: 10px;
+    }
+
     #blog {
         display: inline;
     }
 
     img {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-        object-position: bottom;
-
+        width: auto;
+        max-width: 100%;
+        height: auto;
     }
 
-    .container {
-        padding: 14px;
+    #table {
+        width: auto;
+        max-width: 100%;
+        height: auto;
     }
 }
     
