--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ img {
         height: auto;
     }
 
-    #table {
+    .table {
         width: auto;
         max-width: 100%;
         height: auto;
